--- a/.gitignore
+++ b/.gitignore
@@ -104,3 +104,6 @@ coordination/orchestration/*
 claude-flow
 # Removed Windows wrapper files per user request
 hive-mind-prompt-*.txt
+
+# Analysis project (reference only)
+analysis_project/
